# CPSC-323-Project-1

./: .gitignore  CMakeLists.txt  ExC Scanning Table.csv  ExC Token Table.csv  README.md
include/: assertions.h  constants.h  lexer.h  logging.h  utilities.h
src/: assertions.cpp  lexer.cpp  main.cpp  utilites.cpp
tables/: Example C Scanning Table.csv  token_table.csv
test/: dummy.csv  lexer.cpp  main.cpp  parse_table.csv  scanning_table.csv  utilities.cpp
